# abandonauth

./: .dockerignore  .editorconfig  .env.sample  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  compose.yml  deployment.yml  docker-compose.yml  flake.nix  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build-image.yml  build.yml  build_api.yml  build_frontend.yml  deploy.yml  development.yml  lint-and-build.yml  linting.yml  main.yml  production.yml  pull_request.yml
abandonauth/: __init__.py  __main__.py  _run.py  app.py  constants.py  main.py  run.py  settings.py
abandonauth/dependencies/: services.py
abandonauth/dependencies/auth/: __init__.py  developer_application_deps.py  hash.py  jwt.py  jwt_bearer.py  password.py  refresh_token.py
abandonauth/dependencies/email/: __init__.py  email_client.py  smtp_client.py
abandonauth/models/: __init__.py  auth.py  detail.py  developer_application.py  discord.py  user.py
abandonauth/routers/: __init__.py  developer_application.py  discord.py  github.py  google.py  index.py  password_login.py  test_router.py  ui.py
abandonauth/routes/: __init__.py  discord.py  github.py  google.py  index.py
abandonauth/static/: styles.css
abandonauth/templates/: create_developer_app.html  created_application_info.html  delete_dev_app_confirmation.html  developer_app_info.html  developer_apps.html  edit_callback_uris.html  index.html  login.html  navbar.html  reset_dev_app_token_confirmation.html
deployment/: development-deployment.yml  production-deployment.yml
docs/: DISCORD-OAUTH2.md  GITHUB-OAUTH2.md
prisma/: schema.prisma
prisma/migrations/20230608041900_add_developer_account_schema/: migration.sql
site/: app.vue  nuxt.config.ts  package.json  tailwind.config.ts
site/components/: CopyString.vue  Footer.vue  LoginButton.vue  NavLinkButton.vue  Navbar.vue
site/layouts/: dashboard.vue
site/middleware/: auth.global.ts
site/pages/: index.vue  login.vue  logout.vue
site/plugins/: fontawesome.js
site/types/: developerApplicationDto.ts
src/api/: .pre-commit-config.yaml  Dockerfile  pyproject.toml
src/api/abandonauth/: .dockerignore  .gitignore  database.py  main.py  settings.py
src/api/abandonauth/dependencies/: services.py
src/api/abandonauth/models/: auth.py  discord.py  user.py
src/api/abandonauth/routers/: developer_application.py  github.py  google.py  password_login.py  ui.py
src/api/abandonauth/templates/: base.html  create_developer_app.html  created_application_info.html  delete_dev_app_confirmation.html  edit_callback_uris.html  index.html  reset_dev_app_token_confirmation.html
src/api/prisma/: schema.prisma
src/api/prisma/migrations/20220730111706_initial_migration/: migration.sql
src/api/prisma/migrations/20230225192202_userid_as_uuid/: migration.sql
src/api/prisma/migrations/20230226205054_add_github_account/: migration.sql
src/api/prisma/migrations/20230226205105_add_google_account/: migration.sql
src/api/prisma/migrations/20230608213554_rename_developer_account_to_developer_application/: migration.sql
src/api/prisma/migrations/20230608232911_add_refresh_token_to_developer_app/: migration.sql
src/api/prisma/migrations/20230609031512_remove_unique_id_constraint_on_owner_id_for_dev_app/: migration.sql
src/api/prisma/migrations/20231029025209_add_callback_ur_is_to_developer_applications/: migration.sql
src/api/prisma/migrations/20231104211933_make_callback_uri_unique_for_a_specific_developer_application_id/: migration.sql
src/api/prisma/migrations/20240415115059_add_test_user/: migration.sql
src/api/prisma/migrations/20240418110549_refactor_password_account/: migration.sql
src/api/prisma/migrations/20240429102307_delete_composite_key/: migration.sql
src/website/: Dockerfile  nuxt.config.ts  package-lock.json
(+18 files in other folders)
