[tool.poetry]
name = "abandonauth"
version = "0.0.1"
description = ""
authors = [
    "GDWR <gdwr@abandontech.cloud>",
    "Fisher60 <kyler@abandontech.cloud>",
]

[tool.pyright]
reportMissingParameterType = true
reportMissingTypeArgument = true

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.1"
httpx = "^0.27.0"
uvicorn = "^0.29.0"
prisma = "^0.13.1"
pydantic = {extras = ["dotenv"], version = "^2.7.1"}
pydantic-settings = "^2.2.1"
python-jose = "^3.3.0"
python-multipart = "^0.0.9"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
pre-commit = "^3.7.0"
pyright = "^1.1.360"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"





[tool.poetry.scripts]
dev = "abandonauth.__main__:main"
